ProductUrlResolver, Images for products and config staticfile

--- a/non-stop/API/appsettings.Development.json
+++ b/non-stop/API/appsettings.Development.json
@@ -10,5 +10,6 @@
     "DefaultConnection": "Data source=skinet.db",
     "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
-  }
+  },
+  "ApiUrl": "https://localhost:5001/Content/"
 }
